--- a/KeaWatch/KeaWatch/Base.lproj/Main.storyboard
+++ b/KeaWatch/KeaWatch/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16F73" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="pZW-Ay-7Kh">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16G29" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="pZW-Ay-7Kh">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -22,8 +22,23 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WFD-0U-sxS">
-                                <rect key="frame" x="126.5" y="318.5" width="122" height="30"/>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" alwaysBounceHorizontal="YES" pagingEnabled="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CfQ-Ph-bj5">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                            </scrollView>
+                        </subviews>
+                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="CfQ-Ph-bj5" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="E9l-Em-obh"/>
+                            <constraint firstAttribute="width" secondItem="CfQ-Ph-bj5" secondAttribute="width" id="Rdd-SR-0wJ"/>
+                            <constraint firstItem="CfQ-Ph-bj5" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="gUa-K1-JEu"/>
+                            <constraint firstAttribute="height" secondItem="CfQ-Ph-bj5" secondAttribute="height" id="oc1-kD-sfT"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="qxj-kp-37M">
+                        <barButtonItem key="rightBarButtonItem" style="plain" id="y95-ba-JTG">
+                            <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="WFD-0U-sxS">
+                                <rect key="frame" x="237" y="7" width="122" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" red="0.327905263" green="1" blue="0.25316517760000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <state key="normal" title="Make observation">
                                     <color key="titleColor" red="0.1450980392" green="0.28235294119999998" blue="0.43137254899999999" alpha="1" colorSpace="calibratedRGB"/>
@@ -32,18 +47,15 @@
                                     <segue destination="jrm-it-aAj" kind="show" id="olJ-K1-sCk"/>
                                 </connections>
                             </button>
-                        </subviews>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                        <constraints>
-                            <constraint firstItem="WFD-0U-sxS" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="cjc-PW-HrO"/>
-                            <constraint firstItem="WFD-0U-sxS" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="qQ9-Dw-dmb"/>
-                        </constraints>
-                    </view>
-                    <navigationItem key="navigationItem" id="qxj-kp-37M"/>
+                        </barButtonItem>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="scrollView" destination="CfQ-Ph-bj5" id="ITb-Kl-QeZ"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2169" y="1789"/>
+            <point key="canvasLocation" x="2168.8000000000002" y="1788.7556221889056"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="mOF-bL-yea">
@@ -143,7 +155,7 @@
             </objects>
             <point key="canvasLocation" x="3254" y="1789"/>
         </scene>
-        <!--Home-->
+        <!--Home View Controller-->
         <scene sceneID="Xjx-sP-inS">
             <objects>
                 <viewController id="OuI-oD-xhG" customClass="HomeViewController" customModule="KeaWatch" customModuleProvider="target" sceneMemberID="viewController">
@@ -168,7 +180,7 @@
                             <constraint firstItem="fc9-SU-Cyu" firstAttribute="centerY" secondItem="vCY-kk-Wjj" secondAttribute="centerY" id="enZ-YE-8Ke"/>
                         </constraints>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Home" id="xQd-cE-dq4"/>
+                    <tabBarItem key="tabBarItem" systemItem="more" id="xQd-cE-dq4"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="f9b-0o-5u0" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
